# Easy-Collector

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.main  Dockerfile.ros2  FOLDERS.md  PLAN_lerobot_renewal.md  README.md  build_appimage.sh  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  golden-principles.md  learning.md  requirements.min.txt  requirements.ros2.txt  requirements.txt  rubric.md  run.sh  start_ros2_services.sh  start_services.sh
.claude/: settings.json
.claude/agents/: README.md  manual-writer.md
.claude/commands/: feature-from-spec.md  manual-update.md  model-test.md  module-deploy.md  nightwatch.md  overnight-queue.md  quick-apply.md  smoke.md  verify-deb.md
.claude/hooks/: frontend-i18n-check.sh  frontend-no-css.sh  frontend-ui-test-reminder.sh  manual-update-reminder.sh  quick-apply-sync.sh
.github/workflows/: build_deb.sh  deploy.yml  modules-release.yml  training-server-release.yml
.omc/: project-memory.json
.omc/sessions/: 0e32f9ac-beff-4c0a-bdbd-b928b7574fb6.json  70dfabf1-dfe7-40df-9222-e9328c4fa5b4.json  a4e7bfd2-4b21-4fea-8408-2cad8c9e3ad9.json  cea2ba9c-7514-4d4b-b55c-7146848e2f3d.json  d9dc6ff6-762d-4e7b-969a-3cfef4db5143.json  e099fe80-8f60-48ea-9ba5-697d0f35811f.json  e9fa0dbc-bb76-47c5-a53b-2ca5aa29483f.json  f48cfede-921d-4f12-a602-ce066b6e209c.json  fe1213bb-0137-4528-a7b0-944c75da2c1b.json  ffdaa5b5-5c59-47f2-af95-dc3aeae966fc.json
.omc/state/: agent-replay-e9fa0dbc-bb76-47c5-a53b-2ca5aa29483f.jsonl  agent-replay-f46ae493-d199-474e-8798-9348370a7736.jsonl  agent-replay-f48cfede-921d-4f12-a602-ce066b6e209c.jsonl  agent-replay-fe1213bb-0137-4528-a7b0-944c75da2c1b.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
backend/: Dockerfile  Dockerfile.base  create_hdf5_v2.py  entrypoint.sh  install_modules.sh  model_editor.py  pkl_editor.py
backend/api/: app.py  (+6 more)
catkin_ws/src/dynamixel_ros/: CMakeLists.txt  package.xml
catkin_ws/src/dynamixel_ros/launch/: dynamixel_node.launch
catkin_ws/src/dynamixel_ros/scripts/: dynamixel_node.py
cmake_pkgs/: install.sh
demo/: README.md  RESULTS.md
docs/: HARNESS.md  README.md  openpi_vs_easytrainer_pi05.md
foundry-harness/: README.md
frontend/: DESIGN.md  Dockerfile  entrypoint.sh  eslint.config.js  package-lock.json  package.json
home-next/: CLAUDE.md  README.md  copy.md  dev.db  next.config.ts  package-lock.json  package.json
isaaclab/: README.md  docker_start.sh
isaaclab/curobo/ws/install/isaac_control_core/share/isaac_control_core/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
isaaclab/curobo/ws/src/curobo_control/: package.xml  setup.cfg  setup.py
isaaclab/curobo/ws/src/curobo_control/config/: piper.yml
isaaclab/curobo/ws/src/curobo_control/curobo_control/core/: __init__.py  curobo_controller.py
isaaclab/moveit/ws/src/isaac_robot_control/: CLAUDE.md  package.xml  setup.cfg  setup.py
isaaclab/moveit/ws/src/isaac_robot_control/config/: moveit.rviz  moveit_controllers.yaml  piper.srdf  piper_moveit.rviz  piper_moveit_controllers.yaml
isaaclab/moveit/ws/src/isaac_robot_control/isaac_robot_control/: benchmark_piper.py  demo_control.py  launch_common.py  motor_in_box_service.py  pick_and_place.py  pick_and_place_piper.py  pick_and_place_service_piper.py  sponge_in_box_service_piper.py  stack_cube_service_piper.py  trajectory_bridge.py  trajectory_bridge_piper.py
isaaclab/moveit/ws/src/isaac_robot_control/isaac_robot_control/core/: __init__.py  bridge.py  controller.py
isaaclab/moveit/ws/src/isaac_robot_control/isaac_robot_control/robots/: __init__.py  franka_bridge.py  piper_bridge.py
isaaclab/moveit/ws/src/isaac_robot_control/isaac_robot_control/tasks/: __init__.py
isaaclab/moveit/ws/src/isaac_robot_control/isaac_robot_control/utils/: __init__.py
isaaclab/moveit/ws/src/isaac_robot_control/launch/: isaac_moveit.launch.py  isaac_moveit_piper.launch.py
modules/robots/omy/ros2/src/omy_bringup/: package.xml  setup.cfg  setup.py
modules/robots/omy/ros2/src/omy_bringup/config/omy_3m/: easytrainer_controller_manager.yaml
modules/robots/omy/ros2/src/omy_bringup/config/omy_f3m/: easytrainer_controller_manager.yaml
modules/robots/omy/ros2/src/omy_bringup/launch/: omy_3m_easytrainer.launch.py  omy_f3m_easytrainer.launch.py
modules/robots/omy/ros2/src/omy_description/: CMakeLists.txt  package.xml
modules/robots/omy/ros2/src/omy_description/urdf/omy_3m/: omy_3m.urdf  omy_3m.urdf.xacro  omy_3m_arm.urdf.xacro
modules/robots/omy/ros2/src/omy_description/urdf/omy_f3m/: omy_f3m.urdf  omy_f3m.urdf.xacro  omy_f3m_arm.urdf.xacro  rh_p12_rn_a.urdf.xacro
modules/robots/test_arm/ros2/test_arm_driver/: package.xml  setup.cfg  setup.py
modules/robots/test_arm/ros2/test_arm_driver/launch/: test_arm.launch.py
modules/robots/test_arm/ros2/test_arm_driver/test_arm_driver/: virtual_arm_node.py
modules/robots/test_arm/ros2/test_arm_driver/urdf/: test_arm.urdf
nightwatch/: README.md
policy-lab/: AGENTS.md  README.md  golden-principles.md  learning.md  rubric.md
python_pkgs/: install.sh
release/: build.sh
ros2/: Dockerfile  Dockerfile.base  Dockerfile.ros2  entrypoint.sh  install_modules.sh  requirements.ros2.txt  start_ros2_services.sh
ros2_ws/src/dynamixel_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/dynamixel_ros/dynamixel_ros/: dynamixel_node.py
ros2_ws/src/dynamixel_ros/launch/: dynamixel_node.launch.py
scripts/: clean_easytrainer.sh  db_snapshot.sh  install_nvidia_runtime.sh  lint_frontend.sh  manual-check.sh  overnight_summary.sh  quick_apply.sh  rebuild_images.sh  release.sh  release_module.sh  smoke.sh  test_orator.py  upsert_module_catalog.sh  validate_modules.py  verify_deb.sh  version.sh
src/: .tmux.conf  create_hdf5_v2.py  dxl_scan.py  fake_modbus_robot.py  kill.sh  package-lock.json  package.json
training_server/: Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  setup_deps.sh  train_worker.py  version.json
vision-reach/: DESIGN.md  RESULTS.md  SPEC.md
(+1084 files in other folders)
