<package format="3">
  <name>dynamixel_ros</name>
  <version>0.0.0</version>
  <description>Dynamixel driver node and interfaces.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>custom_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
