<?xml version="1.0"?>
<package format="3">
  <name>curobo_control</name>
  <version>0.1.0</version>
  <description>cuRobo motion planner for IsaacSim robot control</description>
  <maintainer email="dev@dev.com">dev</maintainer>
  <license>MIT</license>

  <depend>isaac_control_core</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
