<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_robot_control</name>
  <version>0.1.0</version>
  <description>MoveIt2-IsaacSim bridge for robot control</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>

  <depend>isaac_control_core</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_resources_panda_moveit_config</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
