<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omy_bringup</name>
  <version>1.0.0</version>
  <description>
    EasyTrainer bringup for ROBOTIS OMY (OMY-3M / OMY-F3M). Renamed from
    open_manipulator_bringup to avoid a colcon package-name clash with the OMX
    module.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <author email="ywh@robotis.com">Wonho Yun</author>
  <author email="wwj@robotis.com">Woojin Wie</author>
  <depend>rclpy</depend>
  <depend>dynamixel_hardware_interface</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>omy_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
