<?xml version="1.0"?>
<package format="3">
  <name>isaac_control_core</name>
  <version>0.1.0</version>
  <description>Common abstractions for IsaacSim robot control (shared by MoveIt/cuRobo)</description>
  <maintainer email="dev@dev.com">dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
